Broadcast to established children without a thread per child
broadcastMessage spawned a virtual thread per child per message whose
only job was to call write() and be joined — and write() itself only
enqueues a frame for the connection-owned writer and parks. The JFR
baseline put those threads, their continuations and per-child payload
copies at about 4% of total allocation pressure, paid for every search
request forwarded down the branch.

Connection.beginWrite splits write() into its two halves — enqueue now,
await the outcome later — so the broadcast enqueues to every established
child from its own thread and then waits; delivery stays parallel
because each connection's writer drains its own queue. A child still
completing its handshake keeps the old shape: a thread that waits for
its cell without holding up the rest. Failure handling is unchanged — a
failing child is disconnected and the broadcast continues.